syntax = "proto3";

package pluginkubernetes.optimization.v1;
option go_package="github.com/opengovern/plugin-kubernetes-internal/plugin/proto/src/golang";
import "google/protobuf/wrappers.proto";
import "k8s.io/api/core/v1/generated.proto";

// Requests
message KubernetesContainer{
  string name = 1;
  double memory_request = 2;
  double memory_limit = 3;
  double cpu_request = 4;
  double cpu_limit = 5;
}

message KubernetesPod {
  string id = 1;
  string name = 2;
  repeated KubernetesContainer containers = 3;
  k8s.io.api.core.v1.Affinity affinity = 5;
  map<string,string> node_selector = 6;
  repeated k8s.io.api.core.v1.Toleration tolerations = 7;
  map<string,string> labels = 8;
  repeated string owner_kind = 9;
}

message KubernetesDeployment {
  string id = 1;
  string name = 2;
  repeated KubernetesContainer containers = 3;
  int32 replicas = 4;
  k8s.io.api.core.v1.Affinity affinity = 5;
  map<string,string> node_selector = 6;
  repeated k8s.io.api.core.v1.Toleration tolerations = 7;
  map<string,string> labels = 8;
}

message KubernetesStatefulset {
  string id = 1;
  string name = 2;
  repeated KubernetesContainer containers = 3;
  int32 replicas = 4;
  k8s.io.api.core.v1.Affinity affinity = 5;
  map<string,string> node_selector = 6;
  repeated k8s.io.api.core.v1.Toleration tolerations = 7;
  map<string,string> labels = 8;
}

message KubernetesDaemonset {
  string id = 1;
  string name = 2;
  repeated KubernetesContainer containers = 3;
  k8s.io.api.core.v1.Affinity affinity = 5;
  map<string,string> node_selector = 6;
  repeated k8s.io.api.core.v1.Toleration tolerations = 7;
  map<string,string> labels = 8;
}

message KubernetesJob {
  string id = 1;
  string name = 2;
  repeated KubernetesContainer containers = 3;
  int32 completions = 4;
  k8s.io.api.core.v1.Affinity affinity = 5;
  map<string,string> node_selector = 6;
  repeated k8s.io.api.core.v1.Toleration tolerations = 7;
  map<string,string> labels = 8;
}

message NodeSystemInfo {
  string machineID = 1;
  string systemUUID = 2;
  string bootID = 3;
  string kernelVersion = 4;
  string osImage = 5;
  string containerRuntimeVersion = 6;
  string kubeletVersion = 7;
  string kubeProxyVersion = 8;
  string operatingSystem = 9;
  string architecture = 10;
}

message KubernetesNode {
  string id = 1;
  string name = 2;
  map<string,string> annotations = 3;
  map<string,string> labels = 4;
  map<string,int64> capacity = 5;
  NodeSystemInfo node_system_info = 6;
  repeated k8s.io.api.core.v1.Taint taints = 7;
  int64 max_pod_count = 8;
}

message KubernetesPodMetrics {
  map<string, KubernetesContainerMetrics> metrics = 1;
}

message KubernetesContainerMetrics {
  map<string,double> cpu = 1;
  map<string,double> memory = 2;
}

message KubernetesPodOptimizationRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue cli_version = 2;
  map<string,string> identification = 3;
  KubernetesPod pod = 4;
  string namespace = 5;
  map<string,google.protobuf.StringValue> preferences = 6;
  map<string,KubernetesContainerMetrics> metrics = 7;
  bool loading = 8;
}

message KubernetesDeploymentOptimizationRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue cli_version = 2;
  map<string,string> identification = 3;
  KubernetesDeployment deployment = 4;
  string namespace = 5;
  map<string,google.protobuf.StringValue> preferences = 6;
  map<string,KubernetesPodMetrics> metrics = 7;
  bool loading = 8;
}

message KubernetesStatefulsetOptimizationRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue cli_version = 2;
  map<string,string> identification = 3;
  KubernetesStatefulset statefulset = 4;
  string namespace = 5;
  map<string,google.protobuf.StringValue> preferences = 6;
  map<string,KubernetesPodMetrics> metrics = 7;
  bool loading = 8;
}

message KubernetesDaemonsetOptimizationRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue cli_version = 2;
  map<string,string> identification = 3;
  KubernetesDaemonset daemonset = 4;
  string namespace = 5;
  map<string,google.protobuf.StringValue> preferences = 6;
  map<string,KubernetesPodMetrics> metrics = 7;
  bool loading = 8;
}

message KubernetesJobOptimizationRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue cli_version = 2;
  map<string,string> identification = 3;
  KubernetesJob job = 4;
  string namespace = 5;
  map<string,google.protobuf.StringValue> preferences = 6;
  map<string,KubernetesPodMetrics> metrics = 7;
  bool loading = 8;
}

message KubernetesNodeGetCostRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue cli_version = 2;
  map<string,string> identification = 3;
  KubernetesNode node = 4;
}

// Responses
message RightsizingKubernetesContainer {
  string name = 1;
  double memory_request = 2;
  double memory_limit = 3;
  double cpu_request = 4;
  double cpu_limit = 5;
}

message KubernetesContainerRightsizingRecommendation {
  string name = 1;
  RightsizingKubernetesContainer current = 2;
  RightsizingKubernetesContainer recommended = 3;
  google.protobuf.DoubleValue memory_trimmed_mean = 4;
  google.protobuf.DoubleValue memory_max = 5;
  google.protobuf.DoubleValue cpu_trimmed_mean = 6;
  google.protobuf.DoubleValue cpu_max = 7;
  string description = 8;
}

message KubernetesPodRightsizingRecommendation {
  string name = 1;
  repeated KubernetesContainerRightsizingRecommendation container_resizing = 2;
}

message KubernetesDeploymentRightsizingRecommendation {
  string name = 1;
  repeated KubernetesContainerRightsizingRecommendation container_resizing = 2;
  map<string, KubernetesPodRightsizingRecommendation> pod_container_resizing = 3;
}

message KubernetesStatefulsetRightsizingRecommendation {
  string name = 1;
  repeated KubernetesContainerRightsizingRecommendation container_resizing = 2;
  map<string, KubernetesPodRightsizingRecommendation> pod_container_resizing = 3;
}

message KubernetesDaemonsetRightsizingRecommendation {
  string name = 1;
  repeated KubernetesContainerRightsizingRecommendation container_resizing = 2;
  map<string, KubernetesPodRightsizingRecommendation> pod_container_resizing = 3;
}

message KubernetesJobRightsizingRecommendation {
  string name = 1;
  repeated KubernetesContainerRightsizingRecommendation container_resizing = 2;
  map<string, KubernetesPodRightsizingRecommendation> pod_container_resizing = 3;
}

message KubernetesPodOptimizationResponse {
    KubernetesPodRightsizingRecommendation rightsizing = 1;
}

message KubernetesDeploymentOptimizationResponse {
    KubernetesDeploymentRightsizingRecommendation rightsizing = 1;
}

message KubernetesStatefulsetOptimizationResponse {
  KubernetesStatefulsetRightsizingRecommendation rightsizing = 1;
}

message KubernetesDaemonsetOptimizationResponse {
  KubernetesDaemonsetRightsizingRecommendation rightsizing = 1;
}

message KubernetesJobOptimizationResponse {
  KubernetesJobRightsizingRecommendation rightsizing = 1;
}

message KubernetesNodeGetCostResponse {
  google.protobuf.DoubleValue cost = 1;
}

service Optimization {
  rpc KubernetesPodOptimization(KubernetesPodOptimizationRequest) returns (KubernetesPodOptimizationResponse);
  rpc KubernetesDeploymentOptimization(KubernetesDeploymentOptimizationRequest) returns (KubernetesDeploymentOptimizationResponse);
  rpc KubernetesStatefulsetOptimization(KubernetesStatefulsetOptimizationRequest) returns (KubernetesStatefulsetOptimizationResponse);
  rpc KubernetesDaemonsetOptimization(KubernetesDaemonsetOptimizationRequest) returns (KubernetesDaemonsetOptimizationResponse);
  rpc KubernetesJobOptimization(KubernetesJobOptimizationRequest) returns (KubernetesJobOptimizationResponse);
  rpc KubernetesNodeGetCost(KubernetesNodeGetCostRequest) returns (KubernetesNodeGetCostResponse);
}